Tue Jan 20 01:17:06 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/Makefile.am: Fix includes (changes due to sficxx.h).

	* docs/sfidl.texi: Small fixes.

	* bsw/bswcxxutils.h: String to/from GValue conversions are in sficxx.h
	now.

Mon Jan 19 20:46:38 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/Makefile.am tests/perftest.cc: Added a small program to
	test the performancs procedure invocations.

Mon Jan 19 18:50:14 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstsnifferscope.[hc] (sniffer_notify_pcm_data): implemented
	rudimentary scope display drawing routine.
	added bst_sniffer_scope_set_sniffer().

	* beast-gtk/bsttrackroll.c: special case and setup sniffer scopes.

	* bsw/Makefile.am: fix idl includes.
	fix bswgenapi.c dependencies.
	
Mon Jan 19 15:32:21 2004  Tim Janik  <timj@gtk.org>

	* docs/site-development.texi: add french translation.

Sun Jan 18 01:27:13 2004  Christophe Merlet  <redfox@redfoxcenter.org>

	* configure.in: Added "fr" to ALL_LINGUAS.

Sat Jan 17 14:55:09 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bsttrackroll.[hc]: treat scopes as ordinary GtkWidgets.
	cleanup/reset parent_window for children in realize/unrealize, this
	fixes reparentation crashes. reenabled scopes.

	* beast-gtk/bstsnifferscope.[hc]: remove BseTrack special casing.

Sat Jan 17 03:05:49 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* docs/sfidl.texi: Started sfidl documentation.

	* docs/generated/Makefile.am: Build sfidl.markup and sfidl.html.

	* docs/Makefile.am: Include sfidl.texi.

Fri Jan 16 23:13:56 2004  Tim Janik  <timj@gtk.org>

	* docs/generated/Makefile.am: build plugin-devel.markup
	and plugin-devel.html.

	* docs/Makefile.am: install images in ${beastimagesdir}.

	* docs/module-voices.png:
	* docs/module-voices.dia: accompanying diagram for plugin-devel.texi.

	* docs/plugin-devel.texi: started plugin development documentation.

Thu Jan 15 23:48:01 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bsteventroll.c: